# Scan-to-BIM

./: .gitignore  LICENCE  README.md  main.py  pyproject.toml  setup_windows.bat
data/: training_labeled.las
src/: 1_extract.py  2_train.py  3_predict.py  4_correct.py
